# c_sudoku_solver

./: .gitignore  CMakeLists.txt  main.c  solver.c  solver.h
arena/: arena.c  arena.h
board/: board.c  board.h
misc/: misc.c  misc.h
stack/: stack.c  stack.h
tests/: mocks.c  mocks.h  suite.c  suite.h  test_board.c  test_board.h  test_solver.c  test_solver.h  test_stack.c  test_stack.h
